# actor_system

./: .gitignore  LICENSE.md  README.md
sm421432/: CMakeLists.txt  cacti.c  cacti.h  err.c  err.h  macierz.c  main.c  silnia.c
sm421432/test/: CMakeLists.txt  actorSystem_test.c  deadLock_test.c  test.c  test_sigint.c
